--- a/src/app/Componentes/header/nav/nav.component.html
+++ b/src/app/Componentes/header/nav/nav.component.html
@@ -6,11 +6,11 @@
         <a class="header__a" [routerLink]="['/exhibicion']">Exhibicion</a>
     </div>
 
-    <div style="transform: translateX(160px);">
+    <div class="header__traslate header__transform" >
         <a class="header__logo" [routerLink]="['/home']">white cube</a>
     </div>
 
-    <div style="margin-left: 250px;">
+    <div class="header__margin header__left">
         <a class="header__a" [routerLink]="['/coleccion']">Colección</a>
     </div>
     <div>
