--- a/src/app/Componentes/section/coleccion/coleccion.component.html
+++ b/src/app/Componentes/section/coleccion/coleccion.component.html
@@ -16,7 +16,7 @@
 
             <div class="collect__back" >
 
-                <div style=" padding: 2rem; margin: 10px; height: 70%;">
+                <div class="collect__height" style=" padding: 2rem; margin: 10px; height: 70%;">
                     <h3 class="collect__h3">
                         Salón
                     </h3>
@@ -31,7 +31,7 @@
                       </div>
                 </div>
                 <div>
-                    <img src="../../../../assets/img/collect1.JPG" alt="" width="260px" height="247px" style="object-fit: cover;">  
+                    <img src="../../../../assets/img/collect1.JPG" alt="" width="260px" height="247px" class="collect__img" style="object-fit: cover;">  
                 </div>
             </div>
 
@@ -51,7 +51,7 @@
                       </div>
                 </div>
                 <div>
-                    <img src="../../../../assets/img/collect2.JPG" alt="" width="260px" height="247px" style="object-fit: cover;">  
+                    <img src="../../../../assets/img/collect2.JPG" alt="" width="260px" height="247px" class="collect__img" style="object-fit: cover;">  
                 </div>
             </div>
 
@@ -63,7 +63,7 @@
                     </h3>
 
                     <div>
-                        <p style="font-weight: 600; margin: 30px 0px; width: 100%;">
+                        <p class="collect__margin" style="font-weight: 600; margin: 30px 0px; width: 100%;">
                             Descubra todas las obras de arte disponibles en la plataforma y pregunte sobre artistas específicos.                        </p>
                             
                         <a style="padding-top: 2rem;" class="footer__a"><i style="font-size: 15px;" class="ri-arrow-right-line"></i>
@@ -72,7 +72,7 @@
                       </div>
                 </div>
                 <div>
-                    <img src="../../../../assets/img/collect4.JPG" alt="" width="260px" height="247px" style="object-fit: cover;">  
+                    <img src="../../../../assets/img/collect4.JPG" alt="" width="260px" height="247px" class="collect__img" style="object-fit: cover;">  
                 </div>
             </div>
 
@@ -84,7 +84,7 @@
                     </h3>
 
                     <div>
-                        <p style="font-weight: 600; margin: 30px 0px; width: 100%;">
+                        <p class="collect__margin" style="font-weight: 600; margin: 30px 0px; width: 100%;">
                             Para ver una selección curada de obras de arte disponibles y acceder a la información de precios.   
                         </p>
                             
@@ -94,7 +94,7 @@
                       </div>
                 </div>
                 <div>
-                    <img src="../../../../assets/img/collect3.JPG" alt="" width="260px" height="247px" style="object-fit: cover;">  
+                    <img src="../../../../assets/img/collect3.JPG" alt="" width="260px" height="247px" class="collect__img" style="object-fit: cover;">  
                 </div>
             </div>
 
@@ -105,7 +105,7 @@
                         Envíos                    </h3>
 
                     <div>
-                        <p style="font-weight: 600; margin: 30px 0px; width: 100%;">
+                        <p class="collect__margin" style="font-weight: 600; margin: 30px 0px; width: 100%;">
                             Explore las muchas oportunidades de venta con un miembro dedicado de nuestro equipo de ventas experto.                        </p>
                             
                         <a style="padding-top: 2rem;" class="footer__a"><i style="font-size: 15px;" class="ri-arrow-right-line"></i>
@@ -114,7 +114,7 @@
                       </div>
                 </div>
                 <div>
-                    <img src="../../../../assets/img/collect5.JPG" alt="" width="260px" height="247px" style="object-fit: cover;">  
+                    <img src="../../../../assets/img/collect5.JPG" alt="" width="260px" height="247px" class="collect__img" style="object-fit: cover;">  
                 </div>
             </div>
         </div>
