--- a/src/app/Componentes/section/exhibicion/exhibicion.component.html
+++ b/src/app/Componentes/section/exhibicion/exhibicion.component.html
@@ -29,11 +29,10 @@
     <!-- primer grid -->
 
     <div class="exhibicion__grid">
-      <div>
+      <div class="exhibicion__width">
 
         <div class="exhibicion__img">
-          <img style="object-fit: cover;" src="../../../../assets/img/exhibicion1.JPG" alt="" width="600px"
-            height="400px">
+          <img style="object-fit: cover;" src="../../../../assets/img/exhibicion1.JPG" class="exhibicion__img1" alt="" width="600px" height="400px">
         </div>
 
         <div style="padding: 1rem;">
@@ -79,10 +78,10 @@
 
       <!-- 2 -->
 
-      <div>
+      <div class="exhibicion__width">
 
         <div class="exhibicion__img">
-          <img style="object-fit: cover;" src="../../../../assets/img/exhibicion2.JPG" alt="" width="600px"
+          <img style="object-fit: cover;" src="../../../../assets/img/exhibicion2.JPG" class="exhibicion__img1" alt="" width="600px"
             height="400px">
         </div>
 
@@ -146,7 +145,7 @@
         </div>
 
         <div>
-          <p style="font-weight: 600; margin: 30px 0px; width: 60%;">
+          <p class="exhibicion__margin" style="font-weight: 600; margin: 30px 0px; width: 60%;">
             White Cube se complace en participar en artmonte-carlo 2023, presentando obras de artistas como Darren Almond, Georg Baselitz, Tracey Emin, Leonor Fini, Kazunori Hamana, Al Held, Marguerite Humeau, Imi Knoebel, Mimi Lauter, Sol Lewitt, Ibrahim Mahama, Isamu Noguchi, Virginia Overton, Park Seo-Bo y Takis.
           </p>
 
@@ -159,7 +158,7 @@
 
       <div>
         <div>
-          <img src="../../../../assets/img/exhibicion3.JPG" alt="" width="750px" height="auto">
+          <img class="exhibicion__2" src="../../../../assets/img/exhibicion3.JPG" alt="" width="750px" height="auto">
         </div>
       </div>
     </div>
@@ -170,7 +169,7 @@
     <div class="exhibicion__grid2">
       <div>
         <div>
-          <img src="../../../../assets/img/exhibicion4.JPG" alt="" style="object-fit: cover;" width="890px" height="530px">
+          <img src="../../../../assets/img/exhibicion4.JPG" alt="" class="exhibicion__img3" style="object-fit: cover;" width="890px" height="530px">
         </div>
       </div>
 
@@ -188,7 +187,7 @@
           </div>
   
           <div>
-            <p style="font-size: 18px; color: white; font-weight: 600; margin: 30px 0px; width: 90%;">
+            <p class="exhibicion__margin" style="font-size: 18px; color: white; font-weight: 600; margin: 30px 0px; width: 90%;">
               Lo invitamos a explorar nuestra presentación en línea actual del trabajo del mercado secundario en nuestro programa Salon mensual. Hasta la fecha, las presentaciones del mercado secundario de la galería han incluido obras de arte notables de Jean-Michel Basquiat, Alexander Calder, Carmen Herrera y Andy Warhol, entre otros.
             </p>
   
