--- a/src/app/Componentes/section/shop/shop.component.html
+++ b/src/app/Componentes/section/shop/shop.component.html
@@ -13,7 +13,7 @@
 
     <div>
 
-      <div class="width__news" style="display: flex; justify-content: space-between; margin: 10px; padding: 1rem;">
+      <div class="width__news" style="display: flex; justify-content: space-between; margin: 10px; padding: 1rem; ">
         <h2 class="news__h2">Últimas noticias</h2>
   
         <a (click)="mostrarElementos()" class="footer__a" style="color: black; cursor: pointer;">
@@ -24,7 +24,7 @@
       <div class="news__grid">
         <div class="news__flex" *ngFor="let elemento of elementos">
           <div *ngIf="elemento.valor || mostrarElementosFalse">
-            <img style="padding: 1rem;" [src]="elemento.imagen" alt="Imagen" width="200px" height="auto">
+            <img class="news__translate" style="padding: 1rem;" [src]="elemento.imagen" alt="Imagen" width="200px" height="auto">
             <a style="font-size: 15px; display: flex; justify-content: center;" class="footer__a" href="">
               <span>{{ elemento.tipo }}</span>
               <br>
