--- a/src/app/Componentes/header/nav/nav.component.html
+++ b/src/app/Componentes/header/nav/nav.component.html
@@ -30,9 +30,12 @@
 
 <div class="navResponsive">
 
-    <h1 class="navResponsive__h1">mfc 
-        <p class="navResponsive__p"> &copy;</p>
-    </h1>
+    <a style="text-decoration: none;" [routerLink]="['/']">
+
+        <h1 class="navResponsive__h1">mfc 
+            <p class="navResponsive__p"> &copy;</p>
+        </h1>
+    </a>
 
     <div (click)="toggleMenu()">
         <i class="fa fa-bars navResponsive__menu"></i>
